# poetry-guide

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile.minimal  Dockerfile.nopoetry  Dockerfile.optimized
scripts/: build-run-minimal.sh  build-run-nopoetry.sh  build-run-optimized.sh
src/mypackage/: __main__.py  main.py
