
[tool.poetry]
name = "mypackage"
version = "0.1.0"
description = "Guide on how to use poetry for your projects."
authors = ["Stijn de Gooijer <stijn@degooijer.io>"]
license = "MIT"
packages = [
    { include = "mypackage", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
mycli = 'mypackage.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
