[tool.poetry]
name = "mypackage"
version = "0.1.0"
description = "Guide on how to use Poetry for your projects."
authors = ["Stijn de Gooijer <stijndegooijer@gmail.com>"]
license = "Unlicense"
packages = [
    { include = "mypackage", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8"
polars = "^0.19.12"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
mycli = 'mypackage.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
